<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailsViewModel"
            type="com.pratclot.tunetracker.details.DetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tune_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{detailsViewModel.tuneName}"
            android:textSize="24sp"
            tools:layout_editor_absoluteY="16dp" />

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/tune_tab_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</layout>